# crucible

./: .dockerignore  .gitignore  BACKLOG.md  Dockerfile  PLATFORMS.md  README.md  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: build.yml  pages.yml
backend/crucible/: agent.py  agent_react.py  agent_sessions.py  animation.py  app.py  audit.py  avatar.py  avatar_gen.py  bgremove.py  cli.py  client.py  companion.py  config.py  context.py  cowatch.py  detect.py  expression.py  eye_shapes.py  face_params.py  graph.py  hierarchy.py  imagegen.py  inference.py  mcp.py  mcp_server.py  media.py  memory.py  mesh_deform.py  metrics.py  model_profile.py  ollama_import.py  ollama_native.py  orchestrate.py  permissions.py  pixelface.py  prefs.py  rag.py  rate_limit.py  reactions.py  registry.py  (+11 more)
backend/crucible.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/crucible/abliteration/: __init__.py  cards.py  coherence.py  components.py  composition.py  concept.py  detection.py  diagnosis.py  direction.py  feature_card.py  ledger.py  lens.py  lora.py  modality.py  multidir.py  prompts.py  (+14 more)
backend/scripts/: abliterate_hf.py  smoke.py
backend/tests/: conftest.py  test_abl_cards.py  test_abl_causal_endpoints.py  test_abl_coherence.py  test_abl_components.py  test_abl_detection.py  test_abl_diagnosis.py  test_abl_direction.py  test_abl_endpoint.py  test_abl_feature_card.py  test_abl_flow.py  test_abl_heatmap.py  test_abl_insert.py  test_abl_ledger.py  test_abl_lens.py  test_abl_lora.py  test_abl_multidir_concept.py  test_abl_narrative.py  test_abl_orthogonalize.py  test_abl_patching.py  test_abl_pipeline.py  test_abl_probe.py  test_abl_recipes.py  test_abl_restore.py  test_abl_runtime_steer.py  test_abl_sae.py  test_abl_steering.py  test_abl_subspace.py  test_abl_sweep.py  test_abl_tune.py  test_abl_tuned_lens.py  test_abl_verify.py  test_abl_verify_endpoint.py  test_agent.py  test_agent_cancel.py  test_agent_endpoint.py  test_agent_react.py  test_agent_session_run.py  test_agent_sessions.py  test_agent_sessions_endpoint.py  (+109 more)
backend/tools/: separate_glasses.py  separate_iris_pupil.py  separate_nose.py  separate_sclera.py  subdivide_hair.py
frontend/: capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/scripts/: build-docs.mjs
frontend/src/: App.tsx  api.test.ts  api.ts  chatHistory.test.ts  chatHistory.ts  demo.test.ts  demo.ts  localMemory.test.ts  localMemory.ts  main.tsx  schemas.ts  services.test.ts  services.ts  stream.test.ts  styles.css  useCallbackRef.ts  validate.test.ts  validate.ts
packaging/: build_appimage.sh  build_deb.sh  build_mobile.sh  cli_main.py  serve_main.py
(+77 files in other folders)
