[project]
name = "crucible"
version = "0.1.0"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "numpy>=1.26",
    "textual>=8",
    "playwright>=1.40",
    "yt-dlp>=2024.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]
# Live weight editing / diagnosis on real HF weights (the abliteration adapter).
torch = ["torch>=2.2", "transformers>=4.40"]
# The retraining pipeline (LoRA SFT) additionally needs peft.
train = ["torch>=2.2", "transformers>=4.40", "peft>=0.11"]

[project.scripts]
crucible = "crucible.cli:main"
crucible-serve = "crucible.serve:main"
crucible-mcp = "crucible.mcp_server:main"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
pythonpath = ["backend"]
# Starlette's TestClient warns to "install httpx2" — a harmless version-skew notice from a
# transitive dep, not our code. Match by message (it surfaces via fastapi.testclient).
filterwarnings = ["ignore:Using .httpx. with .starlette.testclient. is deprecated:Warning"]
